--- a/public/sass/abstracts/_variables.scss
+++ b/public/sass/abstracts/_variables.scss
@@ -40,10 +40,10 @@ $box-shadow-big-dark: 0 2rem 4rem rgba($color: $darkester-blue, $alpha: .4);
 
 
 // C O M P O N E N T   V A R I A B L E S
-$card-height-big: 50rem;
-$card-height: 42rem;
-$card-height-tab: 45rem;
-$card-height-phone: 62rem;
+$card-height-big: 60rem;
+$card-height: 50rem;
+$card-height-tab: 48rem;
+$card-height-phone: 70rem;
 
 // S H A P E S 
 $circle70: circle(70% at 70% 70%);
