--- a/public/sass/components/_popup.scss
+++ b/public/sass/components/_popup.scss
@@ -59,6 +59,10 @@
                 padding: 8rem;
             }
         }
+
+        &--cert{
+            width: 100%
+        }
     }
 
     &__error{
